--- a/src/main/webapp/app/entities/vote/vote-attente-sg.component.html
+++ b/src/main/webapp/app/entities/vote/vote-attente-sg.component.html
@@ -4,41 +4,49 @@
     </h2>
     <jhi-alert></jhi-alert>
     <br/>
-    <div class="table-responsive" *ngIf="evenements">
-        <table class="table table-striped">
-            <thead>
-            <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-                <th jhiSortBy="nom"><span jhiTranslate="socialGameApp.vote.evenement">Evenement</span> <span class="fa fa-sort"></span></th>
-                <th jhiSortBy="dateFinVote"><span jhiTranslate="socialGameApp.vote.dateFin">DateFinVote</span> <span class="fa fa-sort"></span></th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let evenement of evenements; trackBy: trackId">
-                <td>
-                    <a [routerLink]="['../evenement-sg', evenement.id]">{{evenement.nom}}</a>
-                </td>
-                <td>{{evenement.dateFinVote | date:'medium'}}</td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['../vote-sg/voter', evenement.id ]"
-                                class="btn btn-info btn-sm">
-                            <span class="fa fa-envelope-open-o"></span>
-                            <span class="hidden-md-down" jhiTranslate="entity.action.voter">Voter</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <div *ngIf="evenements && evenements.length">
-        <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="queryCount" [itemsPerPage]="itemsPerPage"></jhi-item-count>
-        </div>
-        <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" (pageChange)="loadPage(page)"></ngb-pagination>
-        </div>
-    </div>
+    <span ngSwitch="evenements && evenements.length > 0">
+        <span *ngSwitchCase="true">
+            <div class="table-responsive" >
+                <table class="table table-striped">
+                    <thead>
+                    <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
+                        <th jhiSortBy="nom"><span jhiTranslate="socialGameApp.vote.evenement">Evenement</span> <span class="fa fa-sort"></span></th>
+                        <th jhiSortBy="dateFinVote"><span jhiTranslate="socialGameApp.vote.dateFin">DateFinVote</span> <span class="fa fa-sort"></span></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let evenement of evenements; trackBy: trackId">
+                        <td>
+                            <a [routerLink]="['/evenement-sg', evenement.id]">{{evenement.nom}}</a>
+                        </td>
+                        <td>{{evenement.dateFinVote | date:'medium'}}</td>
+                        <td class="text-right">
+                            <div class="btn-group flex-btn-group-container">
+                                <button type="submit"
+                                        [routerLink]="['/', { outlets: { popup: 'vote-sg/voter/'+ evenement.id } }]"
+                                        class="btn btn-info btn-sm">
+                                    <span class="fa fa-envelope-open-o"></span>
+                                    <span class="hidden-md-down" jhiTranslate="entity.action.voter">Voter</span>
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div>
+                <div class="row justify-content-center">
+                    <jhi-item-count [page]="page" [total]="queryCount" [itemsPerPage]="itemsPerPage"></jhi-item-count>
+                </div>
+                <div class="row justify-content-center">
+                    <ngb-pagination [collectionSize]="totalItems" [(page)]="page" (pageChange)="loadPage(page)"></ngb-pagination>
+                </div>
+            </div>
+        </span>
+        <span *ngSwitchCase="false">
+            <div jhiTranslate="socialGameApp.vote.message.aucun">Aucun</div>
+        </span>
+    </span>
+
 </div>
