--- a/src/main/webapp/app/entities/vote/vote-voter-sg.component.html
+++ b/src/main/webapp/app/entities/vote/vote-voter-sg.component.html
@@ -18,6 +18,7 @@
                 </tr>
             </tbody>
         </table>
+    </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
             <span class="fa fa-ban"></span>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
