--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col-md-3">
-        <span class="hipster img-fluid img-rounded"></span>
-    </div>
-    <div class="col-md-9">
+    <!--<div class="col-md-3">-->
+        <!--<span class="hipster img-fluid img-rounded"></span>-->
+    <!--</div>-->
+    <div class="col-md-12">
         <!--<p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>-->
 
         <div [ngSwitch]="isAuthenticated() && account !== undefined">
@@ -39,9 +39,23 @@
                 </gridster>
             </div>
 
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
-                <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
+            <div class="alert" *ngSwitchCase="false">
+
+                <h4 jhiTranslate="login.title">Se connecter</h4>
+
+                <form class="form" role="form" (ngSubmit)="login()">
+                    <div class="form-group">
+                        <label for="username" jhiTranslate="global.form.username">Login</label>
+                        <input type="text" class="form-control" name="username" id="username" placeholder="{{'global.form.username.placeholder' | translate}}"
+                               [(ngModel)]="username">
+                    </div>
+                    <div class="form-group">
+                        <label for="password" jhiTranslate="login.form.password">Password</label>
+                        <input type="password" class="form-control" name="password" id="password" placeholder="{{'login.form.password.placeholder' | translate}}"
+                               [(ngModel)]="password">
+                    </div>
+                    <button type="submit" class="btn btn-primary" jhiTranslate="login.form.button">Sign in</button>
+                </form>
             </div>
 
             <div class="alert alert-warning" *ngSwitchCase="false">
