--- a/src/main/webapp/app/shared/login/login.component.html
+++ b/src/main/webapp/app/shared/login/login.component.html
@@ -10,7 +10,7 @@
                 <strong>Failed to sign in!</strong> Please check your credentials and try again.
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-12">
             <form class="form" role="form" (ngSubmit)="login()">
                 <div class="form-group">
                     <label for="username" jhiTranslate="global.form.username">Login</label>
@@ -21,12 +21,6 @@
                     <label for="password" jhiTranslate="login.form.password">Password</label>
                     <input type="password" class="form-control" name="password" id="password" placeholder="{{'login.form.password.placeholder' | translate}}"
                            [(ngModel)]="password">
-                </div>
-                <div class="form-check">
-                    <label class="form-check-label" for="rememberMe">
-                        <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe" [(ngModel)]="rememberMe" checked>
-                        <span jhiTranslate="login.form.rememberme">Remember me</span>
-                    </label>
                 </div>
                 <button type="submit" class="btn btn-primary" jhiTranslate="login.form.button">Sign in</button>
             </form>
@@ -39,12 +33,12 @@
                 <a class="alert-link" (click)="register()" jhiTranslate="global.messages.info.register.link">Register a new account</a>
             </div>
         </div>
-        <div class="col-md-6">
-            <br/>
-            <jhi-social provider="google"></jhi-social>
-            <jhi-social provider="facebook"></jhi-social>
-            <jhi-social provider="twitter"></jhi-social>
-            <!-- jhipster-needle-add-social-button -->
-        </div>
+        <!--<div class="col-md-6">-->
+            <!--<br/>-->
+            <!--<jhi-social provider="google"></jhi-social>-->
+            <!--<jhi-social provider="facebook"></jhi-social>-->
+            <!--<jhi-social provider="twitter"></jhi-social>-->
+            <!--&lt;!&ndash; jhipster-needle-add-social-button &ndash;&gt;-->
+        <!--</div>-->
     </div>
 </div>
