--- a/src/main/webapp/app/layouts/navbar/navbar.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.scss
@@ -64,7 +64,7 @@ Logo styles
             width: 70px;
             display: inline-block;
             vertical-align: middle;
-            background: url("../../../content/images/logo-licorne.jpg") no-repeat center center;
+            background: url("../../../content/images/logo-licorne.png") no-repeat center center;
             background-size: contain;
         }
     }
