--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -31,3 +31,7 @@ only screen and (                min-resolution: 2dppx) {
         background: white!important;
     }
 }
+
+.label-progressbar{
+    width: 100%;
+}
