--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -243,3 +243,11 @@ Social button
     color: #fff;
 }
 /* jhipster-needle-scss-add-main JHipster will add new css style */
+
+/* ==========================================================================
+Pop-up votes
+========================================================================== */
+
+.label-progressbar{
+    width: 100%!important;
+}
