--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -78,6 +78,11 @@
                         <option *ngFor="let language of languages" [value]="language">{{language | findLanguageFromKey}}</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="avatar" jhiTranslate="global.form.avatar">Avatar</label>
+                    <input type="text" class="form-control" id="avatar" name="avatar" placeholder="{{'global.form.avatar.placeholder' | translate}}"
+                           [(ngModel)]="settingsAccount.imageUrl">
+                </div>
                 <button type="submit" [disabled]="settingsForm.form.invalid" class="btn btn-primary" jhiTranslate="settings.form.button">Save</button>
             </form>
         </div>
