--- a/src/main/webapp/app/entities/jeu/jeu-sg-dialog.component.html
+++ b/src/main/webapp/app/entities/jeu/jeu-sg-dialog.component.html
@@ -38,8 +38,8 @@
         </div>
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="socialGameApp.jeu.description" for="field_description">Description</label>
-            <input type="text" class="form-control" name="description" id="field_description"
-                [(ngModel)]="jeu.description"  />
+            <textarea type="text" class="form-control" name="description" id="field_description"
+                      [(ngModel)]="jeu.description" rows="4"></textarea>
         </div>
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="socialGameApp.jeu.image" for="field_image">Image</label>
