[Note] création entité de note

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -251,3 +251,11 @@ Pop-up votes
 .label-progressbar{
     width: 100%!important;
 }
+
+/* ==========================================================================
+Legende textarea
+========================================================================== */
+
+.legende-textarea{
+    font-size: 0.8em!important;
+}
