--- a/src/main/webapp/app/entities/jeu/jeu-sg-dialog.component.html
+++ b/src/main/webapp/app/entities/jeu/jeu-sg-dialog.component.html
@@ -40,6 +40,7 @@
             <label class="form-control-label" jhiTranslate="socialGameApp.jeu.description" for="field_description">Description</label>
             <textarea type="text" class="form-control" name="description" id="field_description"
                       [(ngModel)]="jeu.description" rows="4"></textarea>
+            <legend class="pull-right legende-textarea">{{ jeu.description !== undefined ? jeu.description.length : 0}} / 1024 max.</legend>
         </div>
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="socialGameApp.jeu.image" for="field_image">Image</label>
