--- a/src/main/webapp/app/entities/vote/vote-attente-sg.component.html
+++ b/src/main/webapp/app/entities/vote/vote-attente-sg.component.html
@@ -18,7 +18,7 @@
                     <tbody>
                     <tr *ngFor="let evenement of evenements; trackBy: trackId">
                         <td>
-                            <a [routerLink]="['/evenement-sg', evenement.id]">{{evenement.nom}}</a>
+                            {{evenement.nom}}
                         </td>
                         <td>{{evenement.dateFinVote | date:'medium'}}</td>
                         <td class="text-right">
